--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <groupId>org.example</groupId>
     <artifactId>bank</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <dependencies>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -31,7 +30,12 @@
             <version>5.8.0-M1</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
